# modelit

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
modelit/: __init__.py  __main__.py  cli.py  registry.py
modelit/templates/abstract_factory_pattern/: template.java
modelit/templates/adapter_pattern/: template.java
modelit/templates/advanced_exceptions/: template.java
modelit/templates/assertions/: template.java
modelit/templates/backpropagation/: template.py
modelit/templates/backpropogation/: template.py
modelit/templates/bridge_pattern/: template.java
modelit/templates/builder_pattern/: template.java
modelit/templates/cnn/: template.py
modelit/templates/command_pattern/: template.java
modelit/templates/composite_pattern/: template.java
modelit/templates/decorator_pattern/: template.java
modelit/templates/diffusion/: template.py
modelit/templates/facade_pattern/: template.java
modelit/templates/factory_pattern/: template.java
modelit/templates/flyweight_pattern/: template.java
modelit/templates/gan/: template.py
modelit/templates/interpreter_pattern/: template.java
modelit/templates/java_default_methods/: template.java
modelit/templates/jca_digital_signature/: template.java
modelit/templates/jca_encryption/: template.java
modelit/templates/jca_hashing/: template.java
modelit/templates/jca_hmac/: template.java
modelit/templates/jca_mac/: template.java
modelit/templates/jca_rsa/: template.java
modelit/templates/jca_secure_random/: template.java
modelit/templates/lstm/: template.py
modelit/templates/mediator_pattern/: template.java
modelit/templates/memento_pattern/: template.java
modelit/templates/observer_pattern/: template.java
modelit/templates/pca_ae/: template.py
modelit/templates/perceptron/: metadata.json  template.py
modelit/templates/prototype_pattern/: template.java
modelit/templates/proxy_pattern/: template.java
modelit/templates/rnn/: template.py
modelit/templates/sofm/: template.py
modelit/templates/solid_notification/: EmailSender.java  Main.java  NotificationSender.java  NotificationService.java  PushSender.java  SlackSender.java  SmsSender.java
modelit/templates/solid_shapes/: AreaCalculator.java  Circle.java  Main.java  Pentagon.java  (+1 more)
(+9 files in other folders)
