[build-system]
requires = ["setuptools>=77", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "modelit"
dynamic = ["version"]
description = "Local-first ML starter templates you can print or save"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Yashsmith" }]
keywords = ["ml", "deep-learning", "templates", "boilerplate", "pytorch", "scikit-learn"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Intended Audience :: Education",
  "Intended Audience :: Developers",
]
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/Yashsmith/modelit"
Source = "https://github.com/Yashsmith/modelit"
Issues = "https://github.com/Yashsmith/modelit/issues"

[project.scripts]
modelit = "modelit.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["modelit*"]

[tool.setuptools.package-data]
modelit = ["templates/*/*.py"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
